# polarity

./: CLAUDE.md  README.md  pyproject.toml
app/: config.py  deps.py  main.py  models.py
app/routers/: items.py
tests/: test_items.py
